# patient-encounter-system

./: .coverage  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: database.py  main.py
src/models/: appointment.py  doctor.py  patient.py
src/schemas/: appointment.py  doctor.py  patient.py
src/services/: appointment_service.py
tests/: conftest.py  test_appointments.py  test_main_routes.py
