[tool.poetry]
name = "patient-encounter-system"
version = "0.1.0"
description = "Production-grade medical backend system"
authors = ["Harshitha"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.0"
mysql-connector-python = "^8.3.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
bandit = "^1.7.7"

# 🔴 THIS PART WAS MISSING (VERY IMPORTANT)
httpx = "^0.28.1"
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
